# brainfuck-rust

./: Cargo.toml  LICENSE  README.md
examples/: LostKingdom.bf  sierpinski.bf
src/: cli.rs  error.rs  interpreter.rs  main.rs  preprocessor.rs
