[package]
name = "bf"
version = "3.0.0"
authors = [ "Brayden Chan (megabyte6)" ]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/megabyte6/brainfuck-rust"
description = "A compiler and interpreter for the Brainfuck esoteric programming language"
repository = "https://github.com/megabyte6/brainfuck-rust"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
